# OmniReport

./: .gitignore  CMakeLists.txt  LICENSE  OmniReport.sln  OmniReport.vcxproj  OmniReport.vcxproj.filters  README.md
Examples/ConsoleTest/: ConsoleTest.cpp  ConsoleTest.sln  ConsoleTest.vcxproj
Include/: OmiReport.h  OmniReport.h
OmniReport/: OmniReport.slnx  OmniReport.vcxproj
Source/: DiscordClient.cpp  DiscordClient.h  OmniReport.cpp
app/: app.slnx  app.vcxproj  main.cpp
examples/demo/: demo.slnx  demo.vcxproj  demo.vcxproj.filters
include/OmniReport/: OmniReport.h
src/: OmniReport.cpp
